@@ -1,16 +1,17 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 1.0-4
-Date: 2019-02-25
+Version: 1.0-5
+Date: 2019-06-20
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
 Depends: variables (>= 0.0-30), R (>= 3.2.0)
 Imports: stats, polynom, Matrix, orthopolynom, methods
+URL: http://ctm.R-forge.R-project.org
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2019-02-27 15:33:07 UTC; hothorn
+Packaged: 2019-06-20 09:55:12 UTC; hothorn
 Author: Torsten Hothorn [aut, cre] (<https://orcid.org/0000-0001-8301-0471>)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2019-02-27 16:20:07 UTC
+Date/Publication: 2019-06-21 15:30:06 UTC
