@@ -1,6 +1,6 @@
-1f249ec98d45c92821c46058848bb4f0 *DESCRIPTION
+1e6d087e9b5528659f17fa39db140531 *DESCRIPTION
 5ef89cd6e5075051efea03fcc107c4f9 *NAMESPACE
-7b4a83452728bbc58068ba8c82cc56c1 *R/bernstein.R
+64fcfbc67d1cd45a76f5c6e1fccc1b13 *R/Bernstein.R
 3126d7ad938777a2f05214a714d0e00f *R/box_bases.R
 e29be446cc3f19e171e814ac61caefbc *R/cbind_bases.R
 dfaa6e61ada2f5144c1952ffddde84a8 *R/cyclic.R
@@ -15,7 +15,7 @@ a4a8bafd0d19ce0071f6175da11815d5 *R/methods.R
 83a98e8fe5a1486261a3e6c3165d5c4e *R/utils.R
 1c9695dee7162d6e72883b552906e753 *cleanup
 5aaca59efd7d34ab4d1851b4c7fdbd58 *inst/CITATION
-a5854a343db68e64d111549423fb43f3 *inst/NEWS.Rd
+4196f2048705b00eafdc1e3ee1fa4665 *inst/NEWS.Rd
 08649b5e01e05a35b2699baad644d7a6 *man/Bernstein_basis.Rd
 e302699142ee0fef7062985a604afd3d *man/Legendre_basis.Rd
 e346889cf14daf60e656a13dd60ac16a *man/as.basis.formula.Rd
@@ -28,7 +28,8 @@ fd29262aeecbb02e20c43c2ee3af8dd0 *man/c.Rd
 3902408a3e92e480bc73654bdc99f564 *man/predict.Rd
 2f57e81ec1583c2c7d40c056b7101d0c *src/L2B.c
 7f028180ac2b6330136711089e01fa0a *src/init.c
-fb7dbbcd3da34d0e5a6f72d65e2c3ed8 *tests/Bernstein-Ex.R
+75a8a91effdefbfdd30b6ddd580da652 *tests/Bernstein-Ex.R
+ca5dcd4b8b4e2489f5fab84cf88c9bdb *tests/Bernstein-Ex.Rout.save
 677a2888a82bdafebfa1e181b0be6997 *tests/bases-Ex.R
 fead45619fac4f6d180ef0b567157141 *tests/formula.R
 b8914cfcc9e669648b545d914c31e1dc *tests/predict.R
